--- a/404.html
+++ b/404.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>ubg98 - HTML5 Unblocked Games</title>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/logo_180.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/logo_16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/logo_32.png">
-    <link rel="icon" type="image/png" sizes="180x180" href="assets/img/logo_180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/logo_192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/img/logo_512.png">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Lato.css">
-    <link rel="stylesheet" href="assets/css/Montserrat.css">
-    <link rel="stylesheet" href="assets/css/Noto%20Sans.css">
-    <link rel="stylesheet" href="assets/css/ubg98Game.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/logo_16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/logo_32.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="/assets/img/logo_180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/logo_192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/logo_512.png">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/Lato.css">
+    <link rel="stylesheet" href="/assets/css/Montserrat.css">
+    <link rel="stylesheet" href="/assets/css/Noto%20Sans.css">
+    <link rel="stylesheet" href="/assets/css/ubg98Game.css">
 </head>
 
 <body><h2 class="frame-5">
@@ -24,13 +24,13 @@
     <span>FOUND</span>
 </h2>
 
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/404.js"></script>
-    <script src="assets/js/adsense_ubg98_v1_4.js"></script>
-    <script src="assets/js/analytics_v1_3_3.js"></script>
-    <script src="assets/js/game_ubg98_v1_6.js"></script>
-    <script src="assets/js/search_v1_8.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/js/404.js"></script>
+    <script src="/assets/js/adsense_ubg98_v1_4.js"></script>
+    <script src="/assets/js/analytics_v1_3_3.js"></script>
+    <script src="/assets/js/game_ubg98_v1_6.js"></script>
+    <script src="/assets/js/search_v1_8.js"></script>
 </body>
 
 </html>
