--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
   
   
     <div class="col col-12 col-sm-6 col-md-4 col-xl-3">
-      <a class="text-center" href="/crazy-cars-unblocked.html"><img src="assets/img/games/crazy-cars.png" style="width: 100%;">
+      <a class="text-center" href="/crazy-cars.html"><img src="assets/img/games/crazy-cars.png" style="width: 100%;">
         <h4 style="padding: 10px;">Crazy Cars</h4>
       </a>
     </div>
